<resources>
    <string name="gms_app_name" translatable="false">MicroG RE</string>
    <string name="gms_settings_name">microG Settings</string>
    <string name="auth_add_account">Add account</string>
    <string name="auth_sign_in">Sign in</string>
    <string name="auth_just_a_sec">Just a sec…</string>
    <string name="auth_sorry">Sorry…</string>
    <string name="signin_picker_title">Choose an account</string>
    <string name="signin_picker_subtitle">to continue to %1$s</string>
    <string name="signin_confirm_button_text">Allow and share</string>
    <string name="signin_picker_add_account_label">Add another account</string>
    <string name="signin_confirm_title">Allow to sign you in to %1$s</string>
    <string name="signin_subtext_sharing">To continue, microG will share name, email address and profile picture of your Google Account with %1$s</string>
    <string name="auth_huawei_button" translatable="false">Huawei</string>
    <string name="auth_before_connect">"Connect Google account with microG.

Let's connect to a Google account, use the <b>Sign in</b> button or use the <b>Huawei</b> button if you have a device with this manufacturer. By pressing one of the buttons you will be redirected to the page to login to your account."</string>
    <string name="auth_connecting">"Your device is establishing a connection to Google’s servers to sign you in.

This can take a few seconds"</string>
    <string name="auth_no_network_error_desc">"You don’t have a network connection.

This could be a temporary problem or your Android device may not be provisioned for data services. Try again when connected to a mobile network, or connect to a Wi-Fi network"</string>
    <string name="auth_general_error_desc">"There was a problem communicating with Google servers.

Try again later"</string>
    <string name="auth_finalize">"Your device is contacting Google to save information to your account.

This can take a couple of minutes"</string>
    <string name="auth_notification_title">Authentication required</string>
    <string name="auth_notification_content">%1$s requires your authorization to access your Google account</string>
    <string name="dialog_title_remove_account">Remove account</string>
    <string name="dialog_message_remove_account">"Are you sure you want to remove this account?

Some services and functions will be unavailable

Your data will not be lost"</string>
    <string name="dialog_confirm_button">Remove</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="snackbar_remove_account">Account %s removed</string>
    <string name="snackbar_undo_button">Undo</string>
    <string name="service_name_mcs">Cloud messaging</string>
    <string name="gcm_enable_switch">Push notifications</string>
    <string name="gcm_registered">Registered</string>
    <string name="gcm_unregister_app">Unregister</string>
    <string name="gcm_remove_registers_dialog_title">Remove all registers?</string>
    <string name="gcm_unregister_confirm_title">Unregister %1$s?</string>
    <string name="gcm_remove_registers_dialog_message">"This will remove all registered apps from receiving push notifications at once

You will need a new securityToken and AndroidID to register apps. Check the device registration status

Some apps may not be able to register again after this action. You may need to clear the data for these apps before they can request registration again"</string>
    <string name="gcm_unregister_confirm_message">"Some apps do not automatically re-register and/or do not provide an option to do so manually. These apps might not work correctly after unregistering.
Continue?"</string>
    <string name="gcm_remove_registers_toast_message">All apps removed from push notification</string>
    <string name="gcm_unregister_after_deny_message">"You denied an app to register for push notifications that is already registered.
Do you want to unregister it now so it does not receive push messages in the future?"</string>
    <string name="gcm_no_message_yet">No messages received so far</string>
    <string name="gcm_last_message_at">Last message: %1$s</string>
    <string name="gcm_registered_since">Registered since: %1$s</string>
    <string name="gcm_messages_counter">Messages: %1$d (%2$d bytes)</string>
    <string name="gcm_network_state_disconnected">Disconnected</string>
    <string name="gcm_network_state_connected">Connected since %1$s</string>
    <string name="network_type_mobile">Mobile network</string>
    <string name="network_type_wifi">Wi-Fi</string>
    <string name="network_type_roaming">Roaming</string>
    <string name="network_type_other">Other networks</string>
    <string name="push_notifications_summary_off">OFF</string>
    <string name="push_notifications_summary_automatic">ON / Automatic: %s</string>
    <string name="push_notifications_summary_manual">ON / Manual: %s</string>
    <string name="push_notifications_summary_values_seconds">%s seconds</string>
    <string name="push_notifications_summary_values_minutes">%s minutes</string>
    <string name="gcm_allow_app_popup">Allow %1$s to register for push notifications?</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="ask_permission_tos">By continuing, you allow this app and Google to use your information in accordance with their respective terms of service and privacy policies</string>
    <string name="ask_scope_permission_title">%1$s would like to:</string>
    <string name="ask_service_permission_title">%1$s would like to use:</string>
    <string name="service_name_checkin">Device registration</string>
    <string name="checkin_enable_switch">Register device</string>
    <string name="checkin_not_registered">Not registered</string>
    <string name="checkin_last_registration">Last registration: %1$s</string>
    <string name="profile_name_native">Native</string>
    <string name="profile_name_real">Real</string>
    <string name="profile_name_user">Custom: %s</string>
    <string name="profile_name_auto">Automatic: %s</string>
    <string name="profile_name_system">System: %s</string>
    <string name="self_check_cat_system">System</string>
    <string name="self_check_cat_patched_apps">Patched apps</string>
    <string name="self_check_cat_gms_packages">Installed packages</string>
    <string name="self_check_cat_fake_sig">Signature spoofing support</string>
    <string name="self_check_source_morphe">Morphe patches</string>
    <string name="self_check_source_alternative">alternative patches</string>
    <string name="self_check_patched_app_installed">Running with %1$s</string>
    <string name="self_check_resolution_patched_app_installed">Apps using %1$s not found. Please patch and install the modified app</string>
    <string name="self_check_action_download_morphe">Download Morphe</string>
    <string name="self_check_name_notifications">Notifications allowed</string>
    <string name="self_check_resolution_notifications">Tap here to open notification settings. Notifications are used to keep GcmService running in the background when battery optimization is enabled or under other conditions</string>
    <string name="self_check_name_overlay">Display over other apps allowed</string>
    <string name="self_check_resolution_overlay">Tap here to grant this permission. This permission is required to show popup alerts on top of other apps</string>
    <string name="self_check_name_battery_optimizations">Battery optimizations disabled</string>
    <string name="self_check_resolution_battery_optimizations">Tap here to disable battery optimizations. If not disabled, you may experience issues receiving notifications from YouTube and other registered apps</string>
    <string name="self_check_name_oem_restriction">Background process restrictions</string>
    <string name="self_check_resolution_oem_restriction">Your system may restrict background processes. Tap here to open Don’t Kill My App! site and learn how to disable these restrictions</string>
    <string name="self_check_name_system_spoofs">System spoofs signature</string>
    <string name="self_check_resolution_system_spoofs">Please check the documentation on which steps might be required</string>
    <string name="self_check_pkg_gms">Play Services</string>
    <string name="self_check_name_app_installed">%1$s installed</string>
    <string name="self_check_resolution_app_installed">Install the application %1$s or a compatible one. Please check the documentation on which applications are compatible</string>
    <string name="prefcat_accounts_login_accounts_title">Logged in</string>
    <string name="prefcat_accounts_options_title">Options</string>
    <string name="prefcat_youtube_activity">YouTube Activity</string>
    <string name="prefcat_push_apps_registered_title">Registered apps</string>
    <string name="prefcat_push_apps_unregistered_title">Unregistered apps</string>
    <string name="prefcat_gcm_registers">Registers</string>
    <string name="prefcat_push_networks_title">Networks to use for push notifications</string>
    <string name="prefcat_applications">Applications</string>
    <string name="prefcat_authentication">Authentication</string>
    <string name="prefcat_about">About</string>
    <string name="prefcat_details">Details</string>
    <string name="prefcat_advanced">Advanced</string>
    <string name="pref_info_status">Status</string>
    <string name="pref_account_title">Accounts</string>
    <string name="pref_account_summary">Sign in to a new Google account</string>
    <string name="pref_accounts_summary">Add and manage Google accounts</string>
    <string name="pref_accounts_manage_accounts_title">Manage accounts</string>
    <string name="pref_accounts_manage_accounts_summary">Open device accounts manager</string>
    <string name="pref_manage_all_history">Manage all history</string>
    <string name="pref_data_in_youtube">Your data in YouTube</string>
    <string name="pref_accounts_login_accounts_summary">Accounts are saved and stored only on this device. Tap an account to remove from this device permanently</string>
    <string name="pref_device_registration_device_profile_category">Device profile</string>
    <string name="pref_device_registration_select_profile_title">Select profile</string>
    <string name="pref_device_registration_import_custom_profile_title">Import custom profile</string>
    <string name="pref_device_registration_import_custom_profile_summary">Import device profile from file</string>
    <string name="pref_device_registration_serial_title">Serial</string>
    <string name="pref_device_registration_android_id">Android ID</string>
    <string name="pref_checkin_enable_summary">Registers your device to Google services and creates a unique device identifier. microG strips identifying bits other than your Google account name from registration data</string>
    <string name="prefcat_push_apps_title">Apps using push notifications</string>
    <string name="pref_push_app_allow_register_title">Allow registration</string>
    <string name="pref_push_app_allow_register_summary">Allow the app to register for push notifications</string>
    <string name="pref_push_app_wake_for_delivery_title">Start app on push message</string>
    <string name="pref_gcm_confirm_new_apps_title">Confirm new apps</string>
    <string name="pref_gcm_confirm_new_apps_summary">Ask before registering a new app to receive push notifications</string>
    <string name="pref_privacy_title">Privacy</string>
    <string name="pref_privacy_summary">Privacy settings for authentication and apps</string>
    <string name="pref_hide_launcher_icon">Hide icon in launcher</string>
    <string name="pref_about_title">About MicroG RE</string>
    <string name="pref_github" translatable="false">GitHub</string>
    <string name="pref_github_summary">Source code repository</string>
    <string name="cond_gcm_bat_action">Ignore optimizations</string>
</resources>