<!--
  ~ Copyright (C) 2013-2017 microG Project Team
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:key="pref_ignore_battery_optimization"
        android:persistent="false"
        android:summary="@string/self_check_resolution_battery_optimizations"
        android:title="@string/cond_gcm_bat_action"
        app:iconSpaceReserved="false"
        app:layout="@layout/preference_material_battery_optimization" />

    <Preference
        android:icon="@drawable/ic_accounts"
        android:key="pref_accounts"
        android:layout="@layout/preference_material_top"
        android:summary="@string/pref_accounts_summary"
        android:title="@string/pref_account_title" />

    <Preference
        android:icon="@drawable/ic_device_login"
        android:key="pref_checkin"
        android:layout="@layout/preference_material_middle"
        android:title="@string/service_name_checkin" />

    <Preference
        android:icon="@drawable/ic_cloud_messaging"
        android:key="pref_gcm"
        android:layout="@layout/preference_material_middle"
        android:title="@string/service_name_mcs" />

    <Preference
        android:icon="@drawable/ic_privacy"
        android:key="pref_privacy"
        android:layout="@layout/preference_material_middle"
        android:summary="@string/pref_privacy_summary"
        android:title="@string/pref_privacy_title" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:icon="@drawable/ic_hide_icon"
        android:key="pref_hide_launcher_icon"
        android:layout="@layout/preference_material_middle"
        android:title="@string/pref_hide_launcher_icon" />

    <Preference
        android:icon="@drawable/ic_self_check"
        android:layout="@layout/preference_material_middle"
        android:title="@string/self_check_title"
        android:summary="@string/self_check_desc"
        android:key="pref_self_check" />

    <Preference
        android:icon="@drawable/ic_github"
        android:key="pref_github"
        android:layout="@layout/preference_material_middle"
        android:summary="@string/pref_github_summary"
        android:title="@string/pref_github" />

    <Preference
        android:icon="@drawable/ic_information"
        android:key="pref_about"
        android:layout="@layout/preference_material_bottom"
        android:title="@string/pref_about_title" />
</PreferenceScreen>
