<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ SPDX-FileCopyrightText: 2017, microG Project Team
  ~ SPDX-License-Identifier: Apache-2.0
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <org.microg.gms.ui.SwitchBarPreference
        android:key="pref_checkin_enabled"
        android:persistent="false"
        android:title="@string/checkin_enable_switch" />

    <PreferenceCategory
        android:key="prefcat_device_profile"
        android:title="@string/pref_device_registration_device_profile_category">

        <ListPreference
            android:key="pref_device_profile"
            android:persistent="false"
            android:title="@string/pref_device_registration_select_profile_title"
            app:dialogIcon="@drawable/ic_profile_device"
            app:iconSpaceReserved="false"
            tools:summary="Automatic (Google Pixel 3, Android 11)" />

        <Preference
            android:key="pref_device_profile_import"
            android:summary="@string/pref_device_registration_import_custom_profile_summary"
            android:title="@string/pref_device_registration_import_custom_profile_title" />

        <Preference
            android:selectable="false"
            android:key="pref_device_serial"
            android:title="@string/pref_device_registration_serial_title"
            tools:summary="123456" />

    </PreferenceCategory>
    <PreferenceCategory
        android:key="prefcat_device_registration_status"
        android:layout="@layout/preference_category_no_label">

        <Preference
            android:selectable="false"
            android:key="pref_device_registration_android_id"
            android:title="@string/pref_device_registration_android_id"
            tools:summary="1953a59d1c1b7e4b" />

        <Preference
            android:key="pref_device_registration_status"
            android:selectable="false"
            android:title="@string/pref_info_status"
            tools:summary="Last registration: 13 hours ago" />

        <PreferenceCategory android:icon="@drawable/ic_information" />

        <org.microg.gms.ui.TextPreference
            android:selectable="false"
            android:summary="@string/pref_checkin_enable_summary" />
    </PreferenceCategory>
</PreferenceScreen>
