<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorSurfaceContainer"
    android:padding="?attr/dialogPreferredPadding">

    <include
        android:id="@+id/include_account_info"
        layout="@layout/dialog_header_remove_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_container"
        style="?attr/materialCardViewFilledStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="?attr/colorSurfaceContainerHighest"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/include_account_info">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dialog_message"
            style="?attr/textAppearanceBodyMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="10"
            android:padding="16dp"
            tools:text="@string/dialog_message_remove_account" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButtonGroup
        android:id="@+id/button_group"
        style="@style/Widget.Material3.MaterialButtonGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_container">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/negative_button"
            style="@style/Widget.Material3Expressive.Button.TonalButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="@string/dialog_cancel_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/positive_button"
            style="@style/Widget.Material3Expressive.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="?attr/colorError"
            android:textColor="?colorOnError"
            tools:text="@string/dialog_confirm_button" />
    </com.google.android.material.button.MaterialButtonGroup>
</androidx.constraintlayout.widget.ConstraintLayout>