<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/account_photo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintEnd_toStartOf="@id/app_icon"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full"
        tools:src="@drawable/ic_google_logo" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/app_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="-12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/account_photo"
        app:layout_constraintTop_toTopOf="@id/account_photo"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full"
        tools:src="@mipmap/ic_launcher" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/permission_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_photo"
        tools:text="App Name would like to:" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/permissions_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:maxHeight="200dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/permission_title"
        tools:itemCount="3"
        tools:listitem="@layout/ask_permission_list_entry" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/permissions_list" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/permission_tos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ask_permission_tos"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceBodySmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress_bar" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_deny"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/deny"
        app:layout_constraintEnd_toStartOf="@id/button_allow"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/permission_tos" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_allow"
        style="?attr/materialButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_deny"
        app:layout_constraintTop_toTopOf="@id/button_deny" />
</androidx.constraintlayout.widget.ConstraintLayout>